--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
     "@angular/router": "~8.2.14",
     "angular-bootstrap-md": "^9.0.0",
     "bootstrap": "^4.4.1",
-    "firebase": "^7.8.1",
+    "firebase": "^7.11.0",
     "jquery": "^3.4.1",
-    "popper.js": "^1.16.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.4.0",
-    "tslib": "^1.10.0",
+    "tslib": "^1.11.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "^0.900.6",
     "@angular-devkit/build-angular": "^0.803.25",
     "@angular/cli": "^8.3.25",
     "@angular/compiler-cli": "~8.2.14",
@@ -39,7 +40,11 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
-    "jasmine-core": "^3.4.0",
+    "firebase-tools": "^7.15.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.5.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
@@ -49,11 +54,6 @@
     "protractor": "^5.4.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3",
-    "@angular-devkit/architect": "<0.900 || ^0.900.0-0 || ^9.0.0-0",
-    "firebase-tools": "^7.12.0",
-    "fuzzy": "^0.1.3",
-    "inquirer": "^6.2.2",
-    "inquirer-autocomplete-prompt": "^1.0.1"
+    "typescript": "~3.5.3"
   }
 }
